; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/cpp/extr_hideset.c_iniths.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/cpp/extr_hideset.c_iniths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@maxhidesets = common dso_local global i32 0, align 4
@hidesets = common dso_local global i32*** null, align 8
@nhidesets = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iniths() #0 {
  %1 = load i32, i32* @maxhidesets, align 4
  %2 = sext i32 %1 to i64
  %3 = mul i64 %2, 8
  %4 = trunc i64 %3 to i32
  %5 = call i64 @domalloc(i32 %4)
  %6 = inttoptr i64 %5 to i32***
  store i32*** %6, i32**** @hidesets, align 8
  %7 = call i64 @domalloc(i32 8)
  %8 = inttoptr i64 %7 to i32**
  %9 = load i32***, i32**** @hidesets, align 8
  %10 = getelementptr inbounds i32**, i32*** %9, i64 0
  store i32** %8, i32*** %10, align 8
  %11 = load i32***, i32**** @hidesets, align 8
  %12 = getelementptr inbounds i32**, i32*** %11, i64 0
  %13 = load i32**, i32*** %12, align 8
  store i32* null, i32** %13, align 8
  %14 = load i32, i32* @nhidesets, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @nhidesets, align 4
  ret void
}

declare dso_local i64 @domalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
